Add repository key to package.json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "scripts": {
         "lint": "eslint --report-unused-disable-directives ."
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/kachurun/eslint-config-flexbe"
+    },
     "author": "kachurun",
     "license": "ISC"
 }
