--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-flexbe",
-  "version": "1.3.3",
-  "description": "ESLint config from Flexbe team",
+  "version": "1.4.0",
+  "description": "ESLint JS/TS config from Flexbe team",
   "main": "index.js",
   "dependencies": {
     "babel-eslint": "^8.2.1",
@@ -9,17 +9,18 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-compat": "^3.9.0",
-    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-riot": "^0.1.8",
-    "eslint-plugin-sort-class-members": "^1.9.0"
+    "eslint-plugin-sort-class-members": "^1.9.0",
+    "@typescript-eslint/parser": "^4.15.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "eslint-plugin-import": "^2.22.1"
   },
-  "devDependencies": {},
   "scripts": {
-    "lint": "eslint --report-unused-disable-directives ."
+    "lint": "npx eslint . --ext .js,.mjs,.ts"
   },
   "repository": {
     "type": "git",
