--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "eslint-config-flexbe",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "ESLint JS/TS config from Flexbe team",
   "main": "index.js",
   "dependencies": {
+    "typescript": "^4.2.2",
     "babel-eslint": "^8.2.1",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-compat": "^3.9.0",
     "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-riot": "^0.1.8",
-    "eslint-plugin-sort-class-members": "^1.9.0",
     "@typescript-eslint/parser": "^4.15.2",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "eslint-plugin-import": "^2.22.1"
