--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "ESLint JS/TS config from Flexbe team",
   "main": "index.js",
   "dependencies": {
-    "typescript": "^4.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "babel-eslint": "^8.2.1",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
     "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-riot": "^0.1.8",
-    "@typescript-eslint/parser": "^4.15.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "eslint-plugin-import": "^2.22.1"
+    "typescript": "^4.2.2"
   },
   "scripts": {
     "lint": "npx eslint . --ext .js,.mjs,.ts"
