--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-flexbe",
+  "name": "@flexbe/eslint-config",
   "version": "1.4.2",
   "description": "ESLint JS/TS config from Flexbe team",
   "main": "index.js",
