--- a/package.json
+++ b/package.json
@@ -26,8 +26,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kachurun/eslint-config-flexbe"
+    "url": "git+https://github.com/kachurun/eslint-config-flexbe.git"
   },
   "author": "kachurun",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kachurun/eslint-config-flexbe/issues"
+  },
+  "homepage": "https://github.com/kachurun/eslint-config-flexbe#readme",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "devDependencies": {}
 }
