--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
-    "babel-eslint": "^8.2.1",
+
     "eslint": "^7.20.0",
+    "@babel/core": "^7.13.1",
+    "@babel/eslint-parser": "^7.13.4",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-babel": "^5.3.1",
