--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@flexbe/eslint-config",
-  "version": "2.1.0",
+  "version": "2.1.2",
   "description": "ESLint JS/TS config from Flexbe team",
   "main": "index.js",
   "dependencies": {
+    "@babel/core": "^7.13.1",
+    "@babel/eslint-parser": "^7.13.4",
+    "@babel/preset-env": "^7.13.5",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
-    "@babel/core": "^7.13.1",
-    "@babel/eslint-parser": "^7.13.4",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-babel": "^5.3.1",
@@ -23,7 +24,7 @@
     "typescript": "^4.2.2"
   },
   "scripts": {
-    "lint": "npx eslint . --ext .js,.mjs,.ts"
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
