--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "typescript": "^4.2.2"
   },
   "scripts": {
-    "lint": "npx eslint ."
+    "lint": "npx eslint .",
+    "publish": "npm publish"
   },
   "repository": {
     "type": "git",
