--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flexbe/eslint-config",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "description": "ESLint JS/TS config from Flexbe team",
   "main": "index.js",
   "dependencies": {
@@ -13,6 +13,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -20,7 +21,6 @@
     "eslint-plugin-optimize-regex": "^1.2.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-riot": "^0.1.8",
     "typescript": "^4.2.2"
   },
   "scripts": {
